; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dtv/extr_linux.c_dvb_set_inversion.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dtv/extr_linux.c_dvb_set_inversion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVERSION_OFF = common dso_local global i32 0, align 4
@INVERSION_ON = common dso_local global i32 0, align 4
@INVERSION_AUTO = common dso_local global i32 0, align 4
@DTV_INVERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dvb_set_inversion(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %10 [
    i32 0, label %6
    i32 1, label %8
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @INVERSION_OFF, align 4
  store i32 %7, i32* %4, align 4
  br label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @INVERSION_ON, align 4
  store i32 %9, i32* %4, align 4
  br label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @INVERSION_AUTO, align 4
  store i32 %11, i32* %4, align 4
  br label %12

12:                                               ; preds = %10, %8, %6
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @DTV_INVERSION, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @dvb_set_prop(i32* %13, i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @dvb_set_prop(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
